--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"astro": "astro"
 	},
 	"dependencies": {
-		"astro": "^2.0.9"
+		"@astrojs/tailwind": "^3.0.1",
+		"astro": "^2.0.9",
+		"tailwindcss": "^3.2.6"
 	},
 	"devDependencies": {
 		"prettier": "^2.8.4",
